feat: configurar CORS y WebSocket para permitir orígenes dinámicos, además de añadir archivos de configuración para despliegue en Render y Vercel
Refs: TAREA-90